2007-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-git.el (vc-git-revision-completion-table, vc-git-revision-table):
	* vc-cvs.el (vc-cvs-revision-completion-table):
	* vc-arch.el (vc-arch-revision-completion-table): Make it work when the
	arg is a list of files.

2007-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el: Remove `diff-tree' operation, now subsumed by `diff'.
	Also `revision-completion-table' now takes a list of files.
	(vc-deduce-fileset): Remove unused var `regexp'.
	Only obey allow-directory-wildcard in dired buffers.
	(vc-default-diff-tree): Remove.
	(vc-diff-added-files): New var.
	(vc-diff-internal): Use it.  Remove arg `backend'.  Update callers.
	(vc-version-diff): Revert from `vc-history-diff' to the original name.
	Remove the `backend' arg.
	(vc-contains-version-controlled-file): Remove.
	(vc-diff): Bring it closer to the version in Emacs-22.
	(vc-revert): Fix typo in let-binding.
	(vc-default-unregister): Remove.
	(vc-dired-buffers-for-dir): Remove N^2 behavior.

2007-10-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* textmodes/two-column.el (2C-split, 2C-merge):
	* textmodes/bib-mode.el (bib-find-key, mark-bib):
	* progmodes/idlw-shell.el (idlwave-shell-move-or-history):
	* progmodes/etags.el (find-tag-in-order, etags-tags-apropos)
	* progmodes/ada-xref.el (ada-get-all-references):
	* obsolete/mlsupport.el (ml-next-line, ml-previous-line):
	* emulation/vi.el (vi-previous-line-first-nonwhite)
	(vi-effective-range, vi-put-before):
	* emulation/edt.el (edt-next-line, edt-previous-line)
	(edt-paragraph-forward): Use forward-line.

	* progmodes/etags.el (tags-apropos): Require apropos at compile
	time too.

	* progmodes/prolog.el: Require comint when compiling.
	(inferior-prolog-flavor): Move defvar before use.

2007-10-19  Richard Stallman  <rms@gnu.org>

	* font-core.el (turn-on-font-lock-if-desired):
	Rename from `turn-on-font-lock-if-enabled'.
	Fully obey `font-lock-global-modes'.
